# eza

./: .gitignore  Cargo.toml  crashed_test_data.db  crashed_test_wal.db  readme.md
crashed_test_data/: 000004.sst  IDENTITY  LOG  LOG.old.1585543121102368  LOG.old.1585543126811004  LOG.old.1585543131805310  LOG.old.1585543223990595  MANIFEST-000014  OPTIONS-000017
src/: main.rs
