[package]
name = "eza"
version = "0.1.0"
authors = ["Tamreen Khan <historium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
rocket = "0.4.2"
uuid= { version = "0.8", features = ["v4"] }
